# Multi-agent-RAG-analysis

./: .gitignore  README.md  check_sweep_status.sh  demo_hyperparameters.py  main.py  pyproject.toml  run_sweep.sh  setup.py  test_system.py  test_unified_system.py  wandb_sweep.yaml
app/: frontend_streamlit.py  llm_client.py  orchestrator.py
app/ingest/: build_index.py  parse_pdf.py
app/rag/: extractor_agent.py  qa_agent.py  risk_diff.py
app2/: frontend_streamlit2.py  orchestrator2.py
app2/rag/: critic_agent.py  enhanced_critic.py  planner_agent.py  prompts.py  retriever.py
scripts/: 01_ingest.py  02_build_index.py  05_wandb_sweep.py  08_wandb_export_analysis.py
